--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@types/react-dom": "^16.9.14",
     "devmoji": "^2.3.0",
     "framer-motion": "^4.1.17",
+    "i18next": "^21.6.10",
+    "i18next-browser-languagedetector": "^6.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
@@ -28,6 +31,7 @@
     "test": "react-scripts test --watchAll=false",
     "test:watch": "react-scripts test",
     "eject": "react-scripts eject",
+    "compile:locale": "node ./build-translations",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "husky install"
@@ -36,7 +40,8 @@
     "extends": "react-app"
   },
   "eslintIgnore": [
-    "commitlint.config.js"
+    "commitlint.config.js",
+    "build-translations.js"
   ],
   "browserslist": {
     "production": [
@@ -53,6 +58,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
+    "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -60,6 +66,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
