--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,21 @@
 # production
 /build
 
+# cache
+.eslintcache
+
+# IDE
+.idea
+
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# .env
+.env
+.env.*
+!.env.example
+
+# Logs
+logs
+*.log
+*.log*
